refactor: update winning status & judge logic